<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >        

	    <!-- Title -->
	    <include layout="@layout/title_bar" />

	    <!-- Pair Myo -->
    	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:orientation="vertical" >
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal"
	            android:paddingTop="10dp" >            
	            <Button
	                android:id="@+id/button_pair_myo"
	                android:layout_width="200dp"
	                android:layout_height="50dp"
	                android:text="@string/pair_myo"
				/>
	            <ImageView
	                android:id="@+id/img_pair_myo"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:contentDescription="@string/img_myo_status"
					android:src="@drawable/main_nok_icon"
				/>            
	        </LinearLayout>
	    </LinearLayout>

    	<!-- Pair RC -->
    	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:orientation="vertical" >
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal"
	            android:paddingTop="10dp" >            
	            <Button
	                android:id="@+id/button_pair_rc"
	                android:layout_width="200dp"
	                android:layout_height="50dp"
	                android:text="@string/pair_rc"
				/>
	            <ImageView
	                android:id="@+id/img_pair_rc"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:contentDescription="@string/img_rc_status"
					android:src="@drawable/main_nok_icon"
				/>            
	        </LinearLayout>
	    </LinearLayout>
	    
    	<!-- Background -->
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:paddingTop="15dp" >
			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/img_rc_status"
				android:src="@drawable/main_background"
			/>
	    </LinearLayout>
	</LinearLayout>

    <!-- Go and Quit button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_background"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true" >
        <Button
            android:id="@+id/button_open_manager"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:enabled="false"
            android:text="@string/text_open_manager"
		/>
        <Button
            android:id="@+id/button_close_app"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/text_close_app"
		/>
    </LinearLayout>

</RelativeLayout>